cli/tests/testdata/run/extension_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Unsupported scheme "ext" for module "ext:runtime/01_errors.js". Supported schemes: [
    "data",
    "blob",
    "file",
    "http",
    "https",
]
await import("ext:runtime/01_errors.js");
^
    at async [WILDCARD]/extension_dynamic_import.ts:1:1
